[package]
name = "wmk"
version = "0.2.1"
edition = "2021"
description = "Create files or directories."
authors = ["9yokuro xzstd099@protonmail.com"]
repository = "https://github.com/9yokuro/wmk.git"
license = "MIT OR Apache-2.0"
keywords = ["cli"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.37", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
inquire = "0.7.4"
path-absolutize = "3.1.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
walkdir = "2.5.0"
